--- a/index.html
+++ b/index.html
@@ -39,6 +39,55 @@
         <li class="inline-block">Socials</li>
     </ul>
 </footer>
+
+
+
+<section class="mySkills">
+    <h1>My UX Skills</h1>
+    <div class="flexContainer">
+        <div>
+            <div>
+                <img >
+                <h3>User Research</h3>
+                <p></p>
+            </div>
+            <div>
+                <img >
+                <h3>User Interface Design</h3>
+                <p></p>
+            </div>
+            <div>
+                <img >
+                <h3>Web Development</h3>
+                <p></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="myWork">
+    <h1>My Work</h1>
+    <div class="workGrid">
+        <div>
+            <img >
+        </div>
+        <div>
+            <h4></h4>
+            <p></p>
+            <button></button>
+        </div>
+        <div>
+            <img >
+        </div>
+        <div>
+            <h4></h4>
+            <p></p>
+            <button></button>
+        </div>
+    </div>
+    <h3>View All Projects</h3>
+</section>
+
     </body>
 
 </html>
