HW 18 Turn-In Draft

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <body>
 <header class="navigation"> 
-    <div class="inline-block" class="logo">
+    <nav class="mainNav">
+        <div class="logo">
         <img src="Images\NK Logo.png" alt="NK Logo">
-    </div>
-    <nav class="inline-block">
-        <ul>
-            <li class="inline-block">About</li>
-            <li class="inline-block">Skills</li>
-            <li class="inline-block">Work</li>
-            <li class="inline-block">Contact</li>
-            <li class="inline-block">Socials</li>
+        </div>
+        <ul class="topNav" style="list-style-type:none;">
+            <li>About</li>
+            <li>Skills</li>
+            <li>Work</li>
+            <li>Contact</li>
+            <li>Socials</li>
         </ul>
     </nav>
 </header>
@@ -30,38 +30,24 @@
     </div>
 </section>
 
-<footer>
-    <ul>
-        <li class="inline-block">About</li>
-        <li class="inline-block">Skills</li>
-        <li class="inline-block">Work</li>
-        <li class="inline-block">Contact</li>
-        <li class="inline-block">Socials</li>
-    </ul>
-</footer>
-
-
-
 <section class="mySkills">
     <h1>My UX Skills</h1>
     <div class="flexContainer">
-        <div>
             <div>
-                <img >
                 <h3>User Research</h3>
-                <p></p>
+                <img src="Images\User Research Icon.png">
+                <p>Text about User Research</p>
             </div>
             <div>
-                <img >
                 <h3>User Interface Design</h3>
-                <p></p>
+                <img src="Images\Interface Design Icon.png">
+                <p>Text about User Interface Design</p>
             </div>
             <div>
-                <img >
                 <h3>Web Development</h3>
-                <p></p>
+                <img src="Images\Web Development Icon.png">
+                <p>Text about Web Development</p>
             </div>
-        </div>
     </div>
 </section>
 
@@ -69,24 +55,41 @@
     <h1>My Work</h1>
     <div class="workGrid">
         <div>
-            <img >
+            <img src="Images\Wireframe Icon.png">
         </div>
         <div>
-            <h4></h4>
-            <p></p>
-            <button></button>
+            <h4>Portfolio Project 1 Title</h4>
+            <p>Description of Portfolio Project 1</p>
+            <button type="button"></button>
         </div>
         <div>
-            <img >
+            <img src="Images\Wireframe Icon.png">
         </div>
         <div>
-            <h4></h4>
-            <p></p>
-            <button></button>
+            <h4>Portfolio Project 2 Title</h4>
+            <p>Description of Portfolio Project 2</p>
+            <button type="button"></button>
         </div>
     </div>
     <h3>View All Projects</h3>
 </section>
+
+<div class="credits">
+    <p><a href="https://www.flaticon.com/free-icons/research" title="research icons">Research icons created by Freepik - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/graphic-design" title="graphic design icons">Graphic design icons created by Flat-icons-com - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/web-development" title="web development icons">Web development icons created by Muhammad Ali - Flaticon</a></p>
+    <p><a href="https://www.flaticon.com/free-icons/wireframe" title="wireframe icons">Wireframe icons created by Vector Squad - Flaticon</a></p>
+</div>
+
+<footer>
+    <ul>
+        <li>About</li>
+        <li>Skills</li>
+        <li>Work</li>
+        <li>Contact</li>
+        <li>Socials</li>
+    </ul>
+</footer>
 
     </body>
 
